Fix some content shifting issues when toggling the widget

--- a/src/public/widget.css
+++ b/src/public/widget.css
@@ -6,7 +6,6 @@ body {
 .widget {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   height: 100vh;
 }
 
@@ -18,13 +17,14 @@ body {
   flex-grow: 1;
   max-height: 500px;
   overflow: hidden;
+  margin-bottom: 1rem;
   position: relative;
   transition: max-height 0s, opacity .5s linear;
 }
 
 .widget__chat-wrapper:not(.show) {
-  display: none;
   max-height: 0;
+  margin-bottom: 0;
   opacity: 0;
   transition: max-height 0s .5s, opacity .5s linear;
 }
